fonte/arquivos/registros/.bkp/20240503142334_Sismo_Pipeline.log

========================================================================
                       Iniciando do Pipeline                         
========================================================================

 Criando arquivos de backup...
 Arquivos de backup criados com sucesso!

 -> Executando events_pipeline.py...
Traceback (most recent call last):
  File "/home/ggrl/projetos/ClassificadorSismologico/source/core/events_pipeline.py", line 22, in <module>
    from baixar_mseed import iterate_events
  File "/home/ggrl/projetos/ClassificadorSismologico/source/core/baixar_mseed.py", line 134
    error_to_save.append({'ID': event_id,
    ^
IndentationError: expected an indented block after 'if' statement on line 132

 Criando arquivos de backup...
 Arquivos de backup criados com sucesso!

 ---------------- INICIANDO CORE/GERAR_PREDCSV.PY ---------------------------- 
Traceback (most recent call last):
  File "/home/ggrl/projetos/ClassificadorSismologico/source/core/gerar_predcsv.py", line 37, in <module>
    gerar_predcsv()
  File "/home/ggrl/projetos/ClassificadorSismologico/source/core/gerar_predcsv.py", line 7, in gerar_predcsv
    df_events = pd.read_csv(csv_events, sep=',')
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ggrl/.pyenv/versions/sismologia/lib/python3.11/site-packages/pandas/io/parsers/readers.py", line 1026, in read_csv
    return _read(filepath_or_buffer, kwds)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ggrl/.pyenv/versions/sismologia/lib/python3.11/site-packages/pandas/io/parsers/readers.py", line 620, in _read
    parser = TextFileReader(filepath_or_buffer, **kwds)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ggrl/.pyenv/versions/sismologia/lib/python3.11/site-packages/pandas/io/parsers/readers.py", line 1620, in __init__
    self._engine = self._make_engine(f, self.engine)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ggrl/.pyenv/versions/sismologia/lib/python3.11/site-packages/pandas/io/parsers/readers.py", line 1880, in _make_engine
    self.handles = get_handle(
                   ^^^^^^^^^^^
  File "/home/ggrl/.pyenv/versions/sismologia/lib/python3.11/site-packages/pandas/io/common.py", line 873, in get_handle
    handle = open(
             ^^^^^
FileNotFoundError: [Errno 2] No such file or directory: './files/events/events.csv'

 -------------- INICIANDO O DATA_ANALYSIS/PREPROCESS.PY -------------------- 

========================================================================
                        Fim do Pipeline                                 
========================================================================

